# Midi-Parser

./: .gitmodules  CMakeLists.txt  README.md
Example/: CMakeLists.txt
Example/assets/: MidiTest.mid  SpanishFlea.mid  maRIO_TheME.mid
Example/assets/Type0/: SpanishFlea - Track 1.mid
Example/assets/Type1/: MidiTest.mid  mapleleaf7.mid
Example/src/: Main.cpp
MidiParser/: CMakeLists.txt
MidiParser/include/: MidiEvent.h  MidiParser.h  MidiTrack.h
MidiParser/include/MidiUtilities/: MidiUtilities.h
MidiParser/src/: Endian.h  MidiParser.cpp  MidiTrack.cpp
MidiParser/src/MidiParser/: Instruments.h  MidiEvent.h  MidiParser.cpp  MidiParser.h  MidiTrack.cpp  MidiTrack.h
MidiParser/src/MidiUtilities/: MidiUtilities.h
